# Encrypt_project/password_encryption/swagger/user_password.yaml
@@ -23,6 +23,30 @@ schemes:
 - "https"
 - "http"
 paths:
+  /admin/add/:
+    post:
+#      tags:
+#        - "users"
+      summary: "Add a new user and password"
+      description: ""
+      operationId: password_encryption.api.password_handle.AdminUser
+      consumes:
+        - "application/json"
+        - "application/xml"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "User object that needs to be added"
+          required: true
+          schema:
+            $ref: "#/definitions/Adminuser"
+      responses:
+        405:
+          description: "Invalid input"
+
   /user/:
     get:
       tags:
@@ -183,3 +207,24 @@ definitions:
         - "md5"
         - "AES"
         - "delivered"
+
+  Adminuser:
+    type: "object"
+    properties:
+      # id:
+      #   type: "integer"
+      #   format: "int64"
+      user_name:
+        type: "string"
+        # format: "int64"
+      enc_password:
+        description: "password which needs to be encrypted"
+        type: "string"
+
+#      encryptionType:
+#        type: "string"
+#        description: "encryption type"
+#        enum:
+#        - "md5"
+#        - "AES"
+#        - "delivered"
